# scarecrow_drone

./: .gitignore  camera_test.py  drone.sdp  drone_data.md  drone_info.py  pyproject.toml  test.txt
.claude/: settings.local.json
drone_scripts/: altitude_monitor.py  autonomous_altitude_control.py  autonomous_flight.py  drone_info.py  flight_constants.py  front_rotors_test.py  interactive_throttle.py  record_video.py  start_streamb5.sh  stats.py  stream_altitude.py
live_detection/: detect.py  drone.sdp
pigeon-detection/: .gitignore  README.md  SYSTEM_DOCUMENTATION.md  augment_data.sbatch  augment_small_pigeons.py  combine_with_negatives.py  requirements.txt  test_model.py  test_robustness.py  test_robustness.sbatch  train.py  train_cluster.sbatch  train_gpu.py  visual_test.py
pigeon-detection/data/: README.dataset.txt  README.roboflow.txt  data.yaml
pigeon-detection/src/pigeon_detector/: CMakeLists.txt  package.xml
pigeon-detection/src/pigeon_detector/config/: detector_config.yaml
pigeon-detection/src/pigeon_detector/launch/: detector.launch  intel_aero.launch
pigeon-detection/src/pigeon_detector/scripts/: __init__.py  camera_handler.py  camera_node.py  detector_node.py  pigeon_detector.py
scarecrow-drone/: README.md  start_app.bat  stop_app.bat
scarecrow-drone/backend/: app.py  requirements.txt  scarecrow.db
scarecrow-drone/database/: database.py  scarecrow.db
scarecrow-drone/drone_scripts/: abort_mission.py  altitude_monitor.py  baro_test.py  check_ekf_params.py  mavlink_altitude_test.py  stats.py  (+5 more)
tests/: drone_info.py  simple_flight_mission.py
(+2201 files in other folders)
