<?xml version="1.0"?>
<package format="2">
  <name>pigeon_detector</name>
  <version>0.1.0</version>
  <description>Pigeon detection system for Intel Aero drone using YOLO</description>

  <maintainer email="user@example.com">Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
